# server/internal/modules/admin/user/user.dig.go
@@ -1,0 +1,20 @@
+package adminuser
+
+import "go.uber.org/dig"
+
+func Provider(c *dig.Container) error {
+	providers := []interface{}{
+		NewRepository,
+		NewService,
+		NewController,
+		NewRouter,
+	}
+
+	for _, p := range providers {
+		if err := c.Provide(p); err != nil {
+			return err
+		}
+	}
+
+	return nil
+}
